--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=sb-ecom
-server.port=9000
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:21905dfd-e645-478f-81cd-4fa5a5019ee9
